[package]
name = "cron-descriptor"
version = "0.1.1"
authors = ["Craig Flockhart <craigflockhart0@gmail.com>"]
description = "Provides human-readable desriptions of cron expressions"
readme = "README.md"
keywords = ["cron","localization","date-and-time"]
categories = ["parsing","localization","date-and-time"]
repository = "https://github.com/cflockhart/cron-descriptor-rust"
homepage = "https://github.com/cflockhart/cron-descriptor-rust"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.10.0"
rust-i18n = "1.1.2"
regex = "1.5.4"
string-builder = "0.2.0"
strfmt = "0.2.1"
substring = "1.4.5"

[dev-dependencies]
ctor = "0.1.26"

[package.metadata.i18n]
# The available locales for your application, default: ["en"].
available-locales = ["en", "es"]

# The default locale, default: "en".
default-locale = "en"
